Clean data cleaning notebook

--- a/jupyter_notebooks/02_data_cleaning.ipynb
+++ b/jupyter_notebooks/02_data_cleaning.ipynb
@@ -36,11 +36,7 @@
         "\n",
         "## Outputs\n",
         "\n",
-        "* Cleaned Train and Test sets, saved under outputs/datasets/cleaned\n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* Cleaned Train and Test sets, saved under outputs/datasets/cleaned\n"
       ]
     },
     {
@@ -822,13 +818,6 @@
       },
       "source": [
         "# Push files to Repo"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "* If you do not need to push files to Repo, you may replace this section with \"Conclusions and Next Steps\" and state your conclusions and next steps."
       ]
     },
     {
