Clean correlation study notebook

--- a/jupyter_notebooks/03_correlation_study.ipynb
+++ b/jupyter_notebooks/03_correlation_study.ipynb
@@ -11,6 +11,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Part of CRISP-DM **Data Understanding**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "1eLEkw5O0ECa"
       },
@@ -31,11 +38,7 @@
         "\n",
         "## Outputs\n",
         "\n",
-        "* Correlation plots and analysis that can be used to build the Streamlit App and provide insights into the relationships between house attributes and sale price.\n",
-        "\n",
-        "## Additional Comments\n",
-        "\n",
-        "* In case you have any additional comments that don't fit in the previous bullets, please state them here. \n"
+        "* Correlation plots and analysis that can be used to build the Streamlit App and provide insights into the relationships between house attributes and sale price.\n"
       ]
     },
     {
@@ -627,11 +630,6 @@
         "* Recently built houses and those with recent renovations tend to have higher sale prices.\n",
         "    * Related variables: [ 'YearBuilt', 'YearRemodAdd']\n"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": []
     }
   ],
   "metadata": {
