Clean feature engineering notebook

--- a/jupyter_notebooks/04_feature_engineering.ipynb
+++ b/jupyter_notebooks/04_feature_engineering.ipynb
@@ -623,10 +623,10 @@
       "metadata": {},
       "source": [
         "* Analyzing the plors we decide on the following:\n",
-        "    * We use log transformation on: ['1stFlrSF', 'GrLivArea', 'LotArea', 'LotFrontage']\n",
-        "    * We use the power transformarion on: ['BsmtUnfSF', 'MasVnrArea','OpenPorchSF','TotalBsmtSF']\n",
+        "    * We use log transformation on: '1stFlrSF', 'GrLivArea', 'LotArea', 'LotFrontage'\n",
+        "    * We use the power transformarion on: 'BsmtUnfSF', 'MasVnrArea', 'OpenPorchSF', 'TotalBsmtSF'\n",
         "    * We use the yeo-johnson transformation on: 'GarageArea'\n",
-        "    * We use no transformation on: ['2ndFlrSF', 'BsmtFinSF1', 'TotalBsmtSF']"
+        "    * We use no transformation on: '2ndFlrSF', 'BsmtFinSF1', 'TotalBsmtSF'"
       ]
     },
     {
