Add evaluation statement to model and eval notebook

--- a/jupyter_notebooks/05_model_and_evaluation.ipynb
+++ b/jupyter_notebooks/05_model_and_evaluation.ipynb
@@ -675,6 +675,13 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "All data points follow the regression line nicely in both data sets. This model performance satisfies the business criteria of an R2 score of 0.75 or better."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "## Refit pipeline with best features"
       ]
     },
